# ZikeQuote3

./: .gitignore  LICENSE  MANIFEST.in  README.md  __init__.py  config.py  imports.py  message_text.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
command/: __init__.py  base_quote_cmd.py  comand_definition.py  info_quote.py  modify_quote.py  old_quote.py  read_quote.py
interface/: message_handle.py  old_quote_api.py  permission.py  quote_handle.py  quote_type.py
nonebot_plugin_zikequote3/: .gitignore  __init__.py  config.py  imports.py
nonebot_plugin_zikequote3/command/: comand_definition.py  info_quote.py  read_quote.py
nonebot_plugin_zikequote3/interface/: message_handle.py
nonebot_plugin_zikequote3/prompts/: advanced_search.txt
nonebot_plugin_zikequote3/templates/: card.html  list.css
nonebot_plugin_zikequote3/utils/: async_tools.py  install_frontend.py  llm_solo.py
prompts/: quote_pickup.txt
templates/: card.css  card.html  list.html  rank.css  rank.html  search.css  search.html  test.html
tests/: conftest.py
tests/e2e_test/: write_and_read.py
utils/: colors.py  formating.py  hitokoto.py  llm_solo.py  states.py
